--- a/Estilos/styles.css
+++ b/Estilos/styles.css
@@ -76,4 +76,20 @@
         padding: 6px 6px;
     }
 
-    
+    .contenedorSeccion{
+        display: grid;
+        margin: 5px;
+        border-color: #444444;
+        border-radius: 1%;
+        justify-content:space-between;
+        background-color:  #effdfc;
+    }
+    .contenedorSeccion:hover{
+        box-shadow: 2px 2px rgb(187, 204, 250);
+    }
+    .grid{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 200px;
+        
+    }
