--- a/Estilos/styles.css
+++ b/Estilos/styles.css
@@ -78,18 +78,20 @@
 
     .contenedorSeccion{
         display: grid;
+        grid-template-columns:40% 40%;
         margin: 5px;
         border-color: #444444;
         border-radius: 1%;
         justify-content:space-between;
         background-color:  #effdfc;
     }
-    .contenedorSeccion:hover{
+    .contenedorSeccion:hover {
         box-shadow: 2px 2px rgb(187, 204, 250);
     }
-    .grid{
+    .grid {
         display: grid;
+        width: 100%;
+        height: 100%;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 200px;
-        
+               
     }
